# checkbox-submission-tools

./: main.py  pyproject.toml
checkbox_submission_tools/: get_devices.py  get_ids.py  get_submission_json.py  journalctl.py  main.py  utils.py
checkbox_submission_tools/tests/: test_get_ids.py  test_journalctl.py  test_utils.py
